bat.string1.lessons.bat.string1.StringBits.scala.error
stringBits:4: error: '<-' expected but integer literal found.
  for (i 0 to n-1) {if (i%2 == 0) {s = s + str.charAt(i).toString}}
         ^stringBits:5: error: illegal start of simple expression
  return s} 
          ^